<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="vrl_like">I like</string>
    <string name="vrl_dont_like">I don\'t like</string>
    <string name="vrl_label">Text</string>
    <string name="vrl_cancel">Cancel</string>
    <string name="vrl_validate">Validate</string>
    <string name="vrl_next">Next</string>
    <string name="madb_time">Time</string>
    <string name="madb_date">Date</string>
    <string name="rv_add">Add</string>
    <string name="rv_load">Load</string>
    <string name="rv_load_asynctask">Load AT</string>
    <string name="rv_delete">Deleted</string>
    <string name="rv_firstname">Firstname</string>
    <string name="rv_lastname">Lastname</string>
    <string name="rv_already_first">Already first</string>
    <string name="rv_pd_title">Progress bar</string>
    <string name="rv_pd_message">Loading in progress...</string>
    <string name="menu_time">MyFirstTimePicker</string>
    <string name="menu_date">MyFirstDatePicker</string>
    <string name="menu_alert">MyFirstAlertDialog</string>
    <string name="menu_recycleview">MyFirstRecycleView</string>
    <string name="menu_intent_exchanges">MyFirstIntentExchanges</string>
    <string name="menu_okhttp_webclient">MyFirstOkHttpAndWebClient</string>
    <string name="menu_service_permission">MyFirstServiceAndPermission</string>
    <string name="menu_notification">MyFirstNotification</string>
    <string name="menu_9patch">MyFirst9patch</string>
    <string name="menu_bdd_utils">MyFirstBdd</string>
    <string name="menu_green_dao">MyFirstGreenDao</string>
    <string name="menu_fragment">MyFirstFragment</string>
    <string name="wois_send">SEND</string>
    <string name="woir_reply">REPLY</string>
    <string name="img">img</string>
    <string name="ohawc_load">Load</string>
    <string name="mfsapa_btn_start">Start</string>
    <string name="mfsapa_btn_stop">Stop</string>
    <string name="mfn_btn_notifiction_simple">Notification</string>
    <string name="mfn_btn_notifiction_timer">Notification will be launch in 5s</string>
    <string name="btn_add_eleve">Add Eleve</string>
    <string name="btn_export">Export Database</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
