<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".controlleur.activity.MyFirstHelloWorldActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_ll_btns">

        <Button
            android:id="@+id/rv_btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rv_add"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/rv_btn_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rv_load"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rv_load_asynctask"
            android:id="@+id/rv_btn_load_asynctask"
            android:layout_weight="1"/>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_rv_eleve"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rv_ll_btns"/>


</RelativeLayout>
